refactor: do clean by util method